--- a/Areas/User/assets/css/userstyle.css
+++ b/Areas/User/assets/css/userstyle.css
@@ -195,22 +195,19 @@
     position: relative;
 }
 
-.account-list li {
-    border-radius: 0;
-    transition: all 0.3s ease;
-}
-
-    .account-list li:hover {
-        transition: all 0.3s ease;
-        background-color: #fb770b1a;
-        border-left: 4px solid #F26B38;
-    }
-
 .account-list li:hover a {
     color: #F26B38;
 }
 
+.account-list li:hover {
+    border-radius: 0;
+    transition: all 0.3s ease;
+    background-color: #fb770b1a;
+    border-left: 4px solid #F26B38;
+}
+
 .account-list a {
+    padding: 10px 4px;
     text-decoration: none;
     color: #000;
     font-size: 14px;
