--- a/Areas/Admin/assets/css/adminstyle.css
+++ b/Areas/Admin/assets/css/adminstyle.css
@@ -7,6 +7,34 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+html {
+    font-size: 16px;
+    overflow-x: hidden;
+}
+
+body {
+    background-color: white;
+    overflow-x: hidden;
+}
+
+a {
+    transition: all 0.3s ease;
+}
+
+    a:focus,
+    a:hover {
+        text-decoration: none;
+    }
+
+button:focus {
+    outline: 0;
+}
+
+.navbar-brand {
+    display: flex;
+    align-items: center;
+}
+
 .header {
     background-color: #fff;
 }
@@ -239,4 +267,76 @@
     margin-right: 5px;
 }
 
+/*body*/
+.line-default {
+    border-bottom: 6px solid #f4f4f4;
+}
 
+.wrapper {
+    margin-top: 3rem;
+}
+
+.wrapper-content {
+    padding: 0;
+}
+
+.frame {
+    background-color: #f58020;
+    border-radius: 5px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    text-align: center;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+    .frame a {
+        text-decoration: none;
+        color: white;
+        font-size: 1rem;
+        font-weight: 400;
+        font-family: Nunito Sans, sans-serif !important;
+    }
+
+.icon {
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.frame p {
+    margin: 0;
+}
+
+.number {
+    font-size: 2rem;
+    font-weight: 500;
+    font-family: Nunito Sans, sans-serif !important;
+}
+
+.element {
+    font-size: small;
+    font-family: Nunito Sans, sans-serif !important;
+}
+
+.list {
+    display: flex;
+    gap: 3rem;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.title-row {
+    margin-bottom: 2rem;
+    font-family: Nunito Sans, sans-serif !important;
+}
+
+.frame:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.chart {
+    margin: 5rem;
+}
