--- a/Areas/Staff/Views/Shared/_StaffLayout.cshtml
+++ b/Areas/Staff/Views/Shared/_StaffLayout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+      var  currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["staff"];
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -6,18 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
     <title>Staff</title>
-    @*<link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:400,700" />*@
     <link rel="stylesheet" href="~/Staff/css/fontawesome.min.css" />
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
-    <!-- https://getbootstrap.com/ -->
     <link rel="stylesheet" href="~/Areas/Staff/assets/css/staff.css">
-    <!--
-    Product Admin CSS Template
-    https://templatemo.com/tm-524-product-admin
-    -->
+
 </head>
 <body id="reportsPage">
     <div class="header">
@@ -60,7 +58,7 @@
                                     <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
                                     <ul class="list-group account-list">
                                         <li class="list-group-item">
-                                            <a href="/Staff/StaffHome/StaffProfile">
+                                            <a href="/Staff/StaffProfile/StaffProfile">
                                                 <i class="fa-solid fa-id-badge account-icon"></i>
                                                 Tài Khoản
                                             </a>
@@ -76,7 +74,9 @@
                             </div>
                         </div>
                         <div class="col-auto" style="align-items: center; display: flex;">
-                            @RenderSection("UserName", required: false)
+                            <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
+                                @currentUser.full_name
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script>
-   
+
         var html5QrcodeScanner;
         var Id = ""
 
@@ -210,7 +210,7 @@
             html5QrcodeScanner.render(onScanSuccess);
         }
 
-        
+
         // event khi mở modal
         $('#qr-scan').on('shown.bs.modal', function () {
             initializeQrScanner();
@@ -220,7 +220,7 @@
         $('#qr-scan').on('hidden.bs.modal', function () {
             if (html5QrcodeScanner) {
                 html5QrcodeScanner.clear();
-                document.getElementById('qr-reader').innerHTML = ''; 
+                document.getElementById('qr-reader').innerHTML = '';
             }
         });
     </script>
