--- a/Areas/Staff/Views/StaffProfile/StaffProfile.cshtml
+++ b/Areas/Staff/Views/StaffProfile/StaffProfile.cshtml
@@ -1,18 +1,13 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    var currentStaff = ViewBag.CurrentUser as CinemaWeb.Models.user;
 }
 
-@{
-    CinemaWeb.Models.user currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["staff"];
-}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
     <title>Staff</title>
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
@@ -57,7 +52,7 @@
                         </div>
                         <div class="col-auto" style="align-items: center; display: flex;">
                             <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
-                                @*@currentUser.full_name*@
+                                @(currentStaff?.full_name)
                             </div>
                         </div>
                     </div>
@@ -80,14 +75,14 @@
                             <label for="name">Name</label>
                             <div class="form remove">
                                 <i class=" fa-solid fa-user icon"></i>
-                                <input type="text" required placeholder="@currentUser.full_name">
+                                <input type="text" required placeholder="@currentStaff?.full_name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
                             <div class="form remove">
                                 <i class="fa-solid fa-envelope - icon"></i>
-                                <input type="text" required placeholder="@currentUser.email">
+                                <input type="text" required placeholder="@currentStaff?.email">
                             </div>
                         </div>
 
@@ -97,7 +92,7 @@
                             <label for="date">Date of birth</label>
                             <div class="form remove">
                                 <i class="far fa-calendar-alt icon"></i>
-                                <input type="text" required placeholder="@currentUser.date_of_birth.Value.ToString("dd/MM/yyyy")">
+                                <input type="text" required placeholder="@(currentStaff.date_of_birth.Value.ToString("dd/MM/yyyy"))">
                             </div>
                         </div>
                         <div class="form-group">
@@ -119,21 +114,21 @@
                                             <label for="name">Name</label>
                                             <div class="subform">
                                                 <i class="fa-solid fa-user sub-icon"></i>
-                                                <input name="name" type="text" required placeholder="@currentUser.full_name">
+                                                <input name="name" type="text" required placeholder="@currentStaff?.full_name">
                                             </div>
                                         </div>
                                         <div class="subform-group">
                                             <label for="email">Email</label>
                                             <div class="subform remove">
                                                 <i class="fa-solid fa-envelope sub-icon"></i>
-                                                <input type="email" required placeholder="@currentUser.email">
+                                                <input type="email" required placeholder="@currentStaff?.email">
                                             </div>
                                         </div>
                                         <div class="subform-group">
                                             <label for="date">Date of birth</label>
                                             <div class="subform">
                                                 <i class="far fa-calendar-alt sub-icon"></i>
-                                                <input type="text" required placeholder="@currentUser.date_of_birth.Value.ToString("dd/MM/yyyy")">
+                                                <input type="text" required placeholder="@(currentStaff?.date_of_birth?.ToString("dd/MM/yyyy"))">
                                             </div>
                                         </div>
                                         <div class="subform-group">
@@ -181,7 +176,7 @@
             var pass = $(".subform input[name='pass']").val();
 
             $.ajax({
-                url: "/Staff/StaffHome/UpdateInfor",
+                url: "/Staff/StaffProfile/UpdateInfor",
                 method: "POST",
                 data: { name: name, pass: pass },
                 success: function (response) {
