--- a/Areas/User/assets/css/movietype.css
+++ b/Areas/User/assets/css/movietype.css
@@ -205,22 +205,19 @@
     color: #F26B38;
 }
 
+.account-list li:hover {
+    border-radius: 0;
+    transition: all 0.3s ease;
+    background-color: #fb770b1a;
+    border-left: 4px solid #F26B38;
+}
+
 .account-list a {
+    padding: 10px 4px;
     text-decoration: none;
     color: #000;
     font-size: 14px;
 }
-
-.account-list li {
-    transition: all 0.3s ease;
-    border-radius: 0;
-}
-
-    .account-list li:hover {
-        transition: all 0.3s ease;
-        background-color: #fb770b1a;
-        border-left: 4px solid #F26B38;
-    }
 
 .account-list {
     display: none;
