--- a/Admin/css/dailyreport.css
+++ b/Admin/css/dailyreport.css
@@ -66,6 +66,7 @@ html {
     font-size:  1rem;
     font-weight: 400;
     font-family: Nunito Sans, sans-serif !important;
+    outline: none;
    
   }
   
